Add unique index on username; error handling; get player by username

--- a/ChessAPI/appsettings.json
+++ b/ChessAPI/appsettings.json
@@ -6,8 +6,10 @@
     }
   },
   "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "mongodb://localhost:27017/"
+  },
   "ChessDatabase": {
-    "ConnectionString": "mongodb://localhost:27017/",
     "DatabaseName": "chess"
   }
 }
